# irmv_detection

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ros_ci.yml
include/irm_detection/: armor.hpp  irm_detector.hpp  pnp_solver.hpp  trt_logger.hpp  yolo_engine.hpp
include/irmv_detection/: armor.hpp  camera.hpp  irm_detector.hpp  pnp_solver.hpp  triple_buffer.hpp  trt_logger.hpp  yolo_engine.hpp
src/: camera.cpp  irm_detector.cpp  mv_camera.cpp  pnp_solver.cpp  yolo_engine.cpp
test/: camera_test.cpp  triple_buffer_test.cpp  yolo_test.cpp
