<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irmv_detection</name>
  <version>0.0.0</version>
  <description>A hardware-accelerated ROS2 node for armor detection in RoboMaster.</description>
  <maintainer email="chiming2@illinois.edu">Chiming Ni</maintainer>
  <license>MIT License</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
